syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "com.expfool.bookkeeper.api.proto";
option java_outer_classname ="BookkeeperProto";

service BookkeeperService {
  rpc getClientStatistic (GetClientStatisticRequest) returns (GetClientStatisticResponse) {}
}

message GetClientStatisticRequest {
  string client_id = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp end_date = 3;
}

message GetClientStatisticResponse {
  repeated Payment payments = 1;
}

message Payment {
  string client_id = 1;
  int32 amount = 2;
  string okved_category = 3;
  string okved_code = 4;
  string sender_account_number = 5;
  string sender_bic = 6;
  string receiver_account_number = 7;
  string receiver_bic = 8;
  google.protobuf.Timestamp payment_time = 9;
}